--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
 	"version": "4.3.4",
 	"private": true,
 	"scripts": {
-		"dev": "vite",
+		"predeploy": "bun run build",
+		"deploy": "gh-pages -d dist",
+		"serve": "vite",
 		"build": "vite build",
 		"preview": "vite preview",
 		"lint": "eslint .",
